<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__registro_color">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="217dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logogg"
        app:layout_constraintBottom_toBottomOf="@+id/registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/id_username"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="284dp"
        android:background="@drawable/rectangle_15_shape"
        android:gravity="center"
        android:textColor="@color/registrate_color"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        app:layout_constraintVertical_bias="0.915"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/contrase_a"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/contrase_a_string"
        android:textColor="@color/contrase_a_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/id_password"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="220dp"
        android:background="@drawable/rectangle_15_shape"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/registrate_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_username"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/contrase_a2"

        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nombre_de_usuario_string"
        android:textColor="@color/contrase_a_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/id_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/registrate"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/registrate_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />


    <ImageView
        android:id="@+id/__img_component_13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="__img_component_13"
        android:src="@drawable/__img_component_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_username"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />

    <ImageView
        android:id="@+id/__img___component_14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="__img___component_14"
        android:src="@drawable/__img___component_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_password"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/__img_component_13"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/id_login_button"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal|center"
        android:background="@drawable/rectangle_16_shape"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="@dimen/material_emphasis_medium"
        android:shadowDy="@dimen/material_emphasis_medium"
        android:text="@string/button_string"
        android:textColor="@color/_bg__registro_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate_string"
        android:textColor="@color/registrate_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/__img___component_14"
        app:layout_constraintVertical_bias="0.806" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/forgot_pass"
        android:textColor="@color/registrate_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />


</androidx.constraintlayout.widget.ConstraintLayout>